src/test/ui/save-analysis/issue-72267.stderr
error: `?Trait` is not permitted in trait object types
  --> $DIR/issue-72267.rs:4:21
   |
LL |     let _: Box<(dyn ?Sized)>;
   |                     ^^^^^^

error[E0224]: at least one trait is required for an object type
  --> $DIR/issue-72267.rs:4:17
   |
LL |     let _: Box<(dyn ?Sized)>;
   |                 ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0224`.
